--- a/sy.html
+++ b/sy.html
@@ -65,7 +65,6 @@
 			text-align: center;
 			color: #fff;
 		}
-		
 		.grab{
 			list-style: none;
 			margin: 0;
@@ -175,7 +174,7 @@
 			<!--幼狮头条-->
 			<div class="ystt_box">
 				<div class="tit">幼狮头条</div>
-				<div style="width: 10rem;overflow-x: scroll;overflow-y: hidden;">
+				<div>
 					<ul class="grab">
 				    	<li>
 				    		<a href="#">
