--- a/fwsc.html
+++ b/fwsc.html
@@ -147,7 +147,7 @@
 		<script type="text/javascript">
 			mui.init()
 			document.getElementById('fuqu').addEventListener('tap', function() {
-			  //打开关于页面1212
+			  //打开关于页面
 			  mui.openWindow({
 			    url: 'https://www.baidu.com/', 
 			    id:'info'
