--- a/index.html
+++ b/index.html
@@ -9,23 +9,24 @@
     <script type="text/javascript" src="js/lib/flexible.js"></script>
 	<script type="text/javascript" src="js/lib/flexible_css.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/style.css"/>
+	<link rel="stylesheet" type="text/css" href="css/iconfont.css"/>
 </head>
 <body>
 	<nav class="mui-bar mui-bar-tab">
 	    <a id="defaultTab" class="mui-tab-item mui-active" href="sy.html">
-	        <span class="mui-icon mui-icon-videocam"></span>
+	        <span class="mui-icon iconfont icon-weibiaoti1"></span>
 	        <span class="mui-tab-label">首页</span>
 	    </a>
 	    <a class="mui-tab-item" href="jxfy.html">
-	        <span class="mui-icon mui-icon-chatboxes"><span style="display: none;" class="mui-badge">1</span></span>
+	        <span class="mui-icon iconfont icon-fangyuanshitu"><span style="display: none;" class="mui-badge">1</span></span>
 	        <span class="mui-tab-label">精选房源</span>
 	    </a>
 	    <a class="mui-tab-item" href="fwsc.html">
-	        <span class="mui-icon mui-icon-home"></span>
+	        <span class="mui-icon iconfont icon-mall"></span>
 	        <span class="mui-tab-label">服务商城</span>
 	    </a>
 	    <a class="mui-tab-item" href="wd.html">
-	        <span class="mui-icon mui-icon-qq"></span>
+	        <span class="mui-icon iconfont icon-ziyuan"></span>
 	        <span class="mui-tab-label">我的</span>
 	    </a>
 	</nav>
