--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 	<nav class="mui-bar mui-bar-tab">
 	    <a id="defaultTab" class="mui-tab-item mui-active" href="sy.html">
-	        <span class="mui-icon iconfont icon-weibiaoti1"></span>
+	        <span class="mui-icon iconfont icon-shouye"></span>
 	        <span class="mui-tab-label">首页</span>
 	    </a>
 	    <a class="mui-tab-item" href="jxfy.html">
@@ -22,17 +22,21 @@
 	        <span class="mui-tab-label">精选房源</span>
 	    </a>
 	    <a class="mui-tab-item" href="fwsc.html">
-	        <span class="mui-icon iconfont icon-mall"></span>
+	        <span class="mui-icon iconfont icon-shangcheng"></span>
 	        <span class="mui-tab-label">服务商城</span>
 	    </a>
+	    <a class="mui-tab-item" href="qyhl.html">
+	        <span class="mui-icon iconfont icon-hezuoguanxi-xianxing"></span>
+	        <span class="mui-tab-label">企业互联</span>
+	    </a>
 	    <a class="mui-tab-item" href="wd.html">
-	        <span class="mui-icon iconfont icon-ziyuan"></span>
+	        <span class="mui-icon iconfont icon-wode"></span>
 	        <span class="mui-tab-label">我的</span>
 	    </a>
 	</nav>
 	<script type="text/javascript" charset="utf-8">
       	mui.init();
-      	var subpages = ['sy.html', 'jxfy.html', 'fwsc.html', 'wd.html'];
+      	var subpages = ['sy.html', 'jxfy.html', 'fwsc.html', 'qyhl.html', 'wd.html'];
 		var subpage_style = {
 			top:'0px',
 			bottom: '51px'
