--- a/sy.html
+++ b/sy.html
@@ -9,124 +9,14 @@
 		<script src="js/mui.min.js"></script>
 		<script type="text/javascript" src="js/lib/flexible.js"></script>
 		<script type="text/javascript" src="js/lib/flexible_css.js"></script>
+		<script type="text/javascript" src="js/lib/jquery-1.10.2.min.js"></script>
 		<link rel="stylesheet" type="text/css" href="css/style.css"/>
+		<link rel="stylesheet" type="text/css" href="css/sy.css"/>
 	</head>
-	<style>
-		#slider{
-				height: 5.666666rem;
-		}
-		.ystt_box{
-			/*幼师头条*/
-			background: #fff;
-		}
-		.rmfy_box{
-			/*热门房源*/
-			background: #f0f0f0;
-			padding-bottom: 0.533333rem;
-		}
-		.zxsj{
-			/*最新数据*/
-			background: #fff;
-		}
-		.tit{
-			position: relative;
-			width: 100%;
-			height: 1.133333rem;
-			line-height: 1.133333rem;
-			font-size: 0.4rem;
-			padding-left: 0.533333rem;
-			border: 1px solid pink;
-		}
-		.tit::before{
-			position: absolute;
-			top: 50%;
-			left: 0.266666rem;
-			margin-top: -0.186666rem;
-			content: "";
-			display: block;
-			width: 0.066666rem;
-			height: 0.373333rem;
-			background: #2b70d8;
-		}
-		.tab_box{
-			display: flex;
-			align-items: center;
-			justify-content: center;
-			width: 100%;
-			height: 1.466666rem;
-			background: #fff;
-		}
-		.tab_box p{
-			width: 3.266666rem;
-			height: 0.773333rem;
-			line-height: 0.773333rem;
-			background: #2b70d8;
-			border-radius: 0.066666rem;
-			text-align: center;
-			color: #fff;
-		}
-		.grab{
-			list-style: none;
-			margin: 0;
-			padding: 0;
-			background: #fff;
-			overflow-y: hidden;
-			overflow-x: auto;
-			white-space: nowrap;
-			padding-bottom: 0.133333rem;
-			padding: 0 0.266666rem;
-		}
-	    .grab .img{
-	    	width: 100%;
-	    	height: 2.0rem;
-	    	overflow: hidden;
-	    }
-	    .grab .img img{
-	    	width: 100%;
-	    }
-	    .grab .title{
-	    	font-size: 0.333333rem;
-			color: #666666;
-			overflow: hidden;
-		    /*text-overflow: ellipsis;*/
-		    white-space: nowrap;
-	    }
-	    .grab li{
-	    	width: 3.066666rem;
-	    	margin: 0 0.133333rem;
-	    	height: 3.6rem;
-	    	border: 1px solid red;
-			display: inline-block;
-	    }
-	    .grab li a{
-	    	height: 100%;
-	    	display: inline-block;
-	    }
-	    .fypic{
-	    	display: flex;
-	    	flex-wrap: wrap;
-			align-items: center;
-			justify-content: center;
-	    	height: 6.3rem;
-	    	border: 1px solid #6641E2;
-	    }
-	    .fypic li{
-	    	width: 4.466666rem;
-	    	height: 3rem;
-	    	overflow: hidden;
-	    	margin-bottom: 0.266666rem;
-	    }
-	    .fypic li img{
-	    	width: 100%;
-	    }
-	    .fypic li:nth-child(odd){
-	    	margin-right: 0.266666rem;
-	    }
-	</style>
 	<body>
-		<header class="mui-bar mui-bar-transparent bg-color-bg">
+		<!--<header class="mui-bar mui-bar-transparent bg-color-bg">
 		    <h1 class="mui-title">首页</h1>
-		</header>
+		</header>-->
 		<div class="mui-content">
 		    <!--轮播-->
 			<div id="slider" class="mui-slider" >
@@ -134,37 +24,37 @@
 			    <!-- 额外增加的一个节点(循环轮播：第一个节点是最后一张轮播) -->
 			    <div class="mui-slider-item mui-slider-item-duplicate">
 			      <a href="#">
-			        <img src="http://47.92.145.21:81/upload/2017-09-07/d2e35d4d93fa1b1ba7853e1042fe2ef8.png">
+			        <img src="img/2.png">
 			      </a>
 			    </div>
 			    <!-- 第一张 -->
 			    <div class="mui-slider-item">
 			      <a href="#">
-			        <img src="http://47.92.145.21:81/upload/2017-09-07/65fc9eec2699652210b4872c3dd008c5.png">
+			        <img src="img/2.png">
 			      </a>
 			    </div>
 			    <!-- 第二张 -->
 			    <div class="mui-slider-item">
 			      <a href="#">
-			        <img src="http://47.92.145.21:81/upload/2017-08-27/e5bca37db916a697da8cb2fa88754875.png">
+			        <img src="img/2.png">
 			      </a>
 			    </div>
 			    <!-- 第三张 -->
 			    <div class="mui-slider-item">
 			      <a href="#">
-			        <img src="http://47.92.145.21:81/upload/2017-08-27/d15b11a32a4705804a5be711b7beae2f.png">
+			        <img src="img/2.png">
 			      </a>
 			    </div>
 			    <!-- 第四张 -->
 			    <div class="mui-slider-item">
 			      <a href="#">
-			        <img src="http://47.92.145.21:81/upload/2017-09-07/d2e35d4d93fa1b1ba7853e1042fe2ef8.png">
+			        <img src="img/2.png">
 			      </a>
 			    </div>
 			    <!-- 额外增加的一个节点(循环轮播：最后一个节点是第一张轮播) -->
 			    <div class="mui-slider-item mui-slider-item-duplicate">
 			      <a href="#">
-			        <img src="http://47.92.145.21:81/upload/2017-09-07/65fc9eec2699652210b4872c3dd008c5.png">
+			        <img src="img/2.png">
 			      </a>
 			    </div>
 			  </div>
@@ -175,7 +65,27 @@
 			    <div class="mui-indicator"></div>
 			  </div>-->
 			</div>
+			<!--最新数据-->
+			<div class="zxsj_box">
+				<div class="tit">最新数据</div>
+			</div>
 			<!--幼狮头条-->
+			<div class="tt_box">
+				<p class="tt_icon">
+					<img src="img/tt_icon.png"/>
+				</p>
+				<ul class="tt_news">
+					<li>
+						<p>置身3D  幼狮带你一起漫游全景空间！</p>
+						<p>穿梭无限空间！幼狮空间首发“3D全景房源”!</p>
+					</li>
+					<li>
+						<p>置身3D  幼狮带你一起漫游全景空间！111</p>
+						<p>穿梭无限空间！幼狮空间首发“3D全景房源”!111</p>
+					</li>
+				</ul>
+			</div>
+			<!--daiceshishiyong-->
 			<div class="ystt_box">
 				<div class="tit">幼狮头条</div>
 				<div>
@@ -262,7 +172,7 @@
 //				    console.log(pictureNumber);
 			    },
 			    isAutoScroll:true,
-			    scrollTime:2
+			    scrollTime:3
 			});
 		</script>
 		<script type="text/javascript">
@@ -274,6 +184,32 @@
 			    id:'info'
 			  });
 			});
+		</script>
+		<script type="text/javascript">  
+			var area = document.getElementsByClassName('tt_news')[0];
+			console.log($('.tt_news li').height());
+			var iliHeight = $('.tt_news li').height();//单行滚动的高度  
+			var speed = 50;//滚动的速度  
+			var time;  
+			var delay= 2000;  
+			area.scrollTop=0;  
+			area.innerHTML+=area.innerHTML;//克隆一份一样的内容  
+			function startScroll(){  
+			    time=setInterval("scrollUp()",speed);  
+			    area.scrollTop++;  
+			}  
+			function scrollUp(){  
+			    if(area.scrollTop % iliHeight==0){  
+			        clearInterval(time);  
+			        setTimeout(startScroll,delay);  
+			    }else{  
+			        area.scrollTop++;  
+			        if(area.scrollTop >= area.scrollHeight/2){  
+			            area.scrollTop =0;  
+			        }  
+			    }  
+			}  
+			setTimeout(startScroll,delay)  
 		</script>
 	</body>
 
