--- a/jxfy.html
+++ b/jxfy.html
@@ -17,7 +17,7 @@
 		    <h1 class="mui-title">精选房源</h1>
 		</header>
 		<div class="mui-content">
-		    <div id="wd">精选房源</div>
+		    <div id="wd">精选房源1111</div>
 		</div>
 		<script type="text/javascript">
 			mui.init()
