--- a/sy.html
+++ b/sy.html
@@ -208,6 +208,51 @@
 				 			</p>
 				 		</div>
 				 	</li>
+				 	<li class="zx"></li>
+				 	<li>
+				 		<div class="fy_pic">
+				 			<img src="img/fypic.png" alt="" />
+				 		</div>
+				 		<div class="fy_xx">
+				 			<p class="lp">建外SOHO</p>
+				 			<p class="mjwz">朝阳区-国贸 101.5m2</p>
+				 			<p class="jzjf">精装交付</p>
+				 			<p class="dj">
+				 				<s>7.5<i>元/m2/天</i></s>
+				 				<span>6.5<i>元/m2/天</i></span>
+				 			</p>
+				 		</div>
+				 	</li>
+				 	<li class="zx"></li>
+				 	<li>
+				 		<div class="fy_pic">
+				 			<img src="img/fypic.png" alt="" />
+				 		</div>
+				 		<div class="fy_xx">
+				 			<p class="lp">建外SOHO</p>
+				 			<p class="mjwz">朝阳区-国贸 101.5m2</p>
+				 			<p class="jzjf">精装交付</p>
+				 			<p class="dj">
+				 				<s>7.5<i>元/m2/天</i></s>
+				 				<span>6.5<i>元/m2/天</i></span>
+				 			</p>
+				 		</div>
+				 	</li>
+				 	<li class="zx"></li>
+				 	<li>
+				 		<div class="fy_pic">
+				 			<img src="img/fypic.png" alt="" />
+				 		</div>
+				 		<div class="fy_xx">
+				 			<p class="lp">建外SOHO</p>
+				 			<p class="mjwz">朝阳区-国贸 101.5m2</p>
+				 			<p class="jzjf">精装交付</p>
+				 			<p class="dj">
+				 				<s>7.5<i>元/m2/天</i></s>
+				 				<span>6.5<i>元/m2/天</i></span>
+				 			</p>
+				 		</div>
+				 	</li>
 				 </ul>
 			</div>
 			<!--daiceshishiyong-->
