--- a/wd.html
+++ b/wd.html
@@ -10,14 +10,30 @@
 		<script type="text/javascript" src="js/lib/flexible.js"></script>
 		<script type="text/javascript" src="js/lib/flexible_css.js"></script>
 		<link rel="stylesheet" type="text/css" href="css/style.css"/>
+		<link rel="stylesheet" type="text/css" href="css/wd.css"/>
 	</head>
 
 	<body>
-		<header class="mui-bar mui-bar-nav bg-color">
-		    <h1 class="mui-title">我的</h1>
+		<header class="mui-bar mui-bar-nav bg-color1">
+		    <h1 class="mui-title wd_h">
+		    	<p class="head_img">
+		    		<img src="img/head_img.png"/>
+		    	</p>
+		    	<p class="user_news">
+					<span class="ljdl">立即登陆</span>
+					<span class="dlcz">登陆后可进行更多操作</span>
+		    	</p>
+		    </h1>
 		</header>
-		<div class="mui-content">
-		    我的
+		<div class="mui-content wd_zt">
+		    <ul class="wd_list">
+		    	<li>
+		    		<p>个人信息</p>
+		    	</li>
+		    	<li>
+		    		<p>我的收藏</p>
+		    	</li>
+		    </ul>
 		</div>
 		<script type="text/javascript">
 			mui.init()
