--- a/wd.html
+++ b/wd.html
@@ -7,6 +7,7 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="css/mui.min.css" rel="stylesheet" />
 		<script src="js/mui.min.js"></script>
+		<script type="text/javascript" src="js/lib/jquery-1.10.2.min.js"></script>
 		<script type="text/javascript" src="js/lib/flexible.js"></script>
 		<script type="text/javascript" src="js/lib/flexible_css.js"></script>
 		<link rel="stylesheet" type="text/css" href="css/style.css"/>
@@ -27,16 +28,61 @@
 		</header>
 		<div class="mui-content wd_zt">
 		    <ul class="wd_list">
-		    	<li>
+		    	<li id="grxx">
+		    		<span class="wd_icon">
+		    			<img src="img/per.png" alt="" />
+		    		</span>
 		    		<p>个人信息</p>
+		    		<span class="mui-icon mui-icon-arrowright wd_con"></span>
 		    	</li>
-		    	<li>
+		    	<li id="wdsc">
+		    		<span class="wd_icon">
+		    			<img src="img/fav.png" alt="" />
+		    		</span>
 		    		<p>我的收藏</p>
+		    		<span class="mui-icon mui-icon-arrowright wd_con"></span>
+		    	</li>
+		    	<li id="sz">
+		    		<span class="wd_icon">
+		    			<img src="img/sz.png" alt="" />
+		    		</span>
+		    		<p>设置</p>
+		    		<span class="mui-icon mui-icon-arrowright wd_con"></span>
 		    	</li>
 		    </ul>
+		    <p class="wd_tip">如有任何疑问请拨打咨询电话</p>
+		    <p class="wd_tel"><a href="tel:400-078-8800">400-078-8800</a></p>
 		</div>
 		<script type="text/javascript">
 			mui.init()
+			$('#grxx').click(function(){
+				mui.openWindow({ 
+					url:'page/person.html', //需要打开页面的url地址 
+					id:'person',  //需要打开页面的url页面id
+					styles:{ 
+						top:'0px',//新页面顶部位置 
+						bottom:'0px',//新页面底部位置 
+	//					width:newpage-width,//新页面宽度，默认为100% 
+	//					height:newpage-height,//新页面高度，默认为100% ...... 
+					}, 
+					extras:{ 
+
+	//					.....//自定义扩展参数，可以用来处理页面间传值 
+					},show:{ //控制打开页面的类型
+						autoShow:true,
+	//					//页面loaded事件发生后自动显示，默认为true 
+						aniShow:'slide-in-right',//页面显示动画，默认为”slide-in-right“；  页面出现的方式 左右上下
+						duration:''//页面动画持续时间，Android平台默认100毫秒，iOS平台默认200毫秒； 
+					}, waiting:{ // 控制 弹出转圈框的信息
+						autoShow:true,//自动显示等待框，默认为true 
+						title:'加载中...',//等待对话框上显示的提示内容 
+						options:{ 
+							width:'100px',//等待框背景区域宽度，默认根据内容自动计算合适宽度 
+							height:'100px',//等待框背景区域高度，默认根据内容自动计算合适高度 ...... 
+						} 
+					}
+				});
+			});
 		</script>
 	</body>
 
