--- a/jxfy.html
+++ b/jxfy.html
@@ -16,15 +16,31 @@
 
 	<body>
 		<header class="mui-bar mui-bar-nav jxfy-bg-color" id="jxfyhead">
-			<h1 class="mui-title">精选房源</h1>
+			<div class="sousu">
+				<span class="mui-icon mui-icon-search sousudubiao"></span>
+				<span class="sousuwenzi">请输入楼盘关键字搜索</span>
+			</div>
 		</header>
+		<div class="mui-content jxfytjxz">
+			<div class="jxfytjweizhi">
+				<ul>
+					<li>位置<span class="mui-icon mui-icon-arrowdown jxfyzxtubiao"></span></li>
+					<li>价格<span class="mui-icon mui-icon-arrowdown jxfyzxtubiao"></span></li>
+					<li>面积<span class="mui-icon mui-icon-arrowdown jxfyzxtubiao"></span></li>
+					<li>筛选<span class="mui-icon mui-icon-arrowdown jxfyzxtubiao"></span></li>
+				</ul>
+			</div>
+		    
+		</div>
+		
+		
 		<script type="text/javascript">
 			mui.init({
 			    subpages:[{
 			      url:'jxfyList.html',//子页面HTML地址，支持本地地址和网络地址
 			      id:'list',//子页面标志
 			      styles:{
-			        top:'65px',//子页面顶部位置
+			        top:'110px',//子页面顶部位置
 			        bottom:'0px',//子页面底部位置
 			        /*width:subpage-width,//子页面宽度，默认为100%
 			        height:subpage-height,//子页面高度，默认为100%
@@ -33,6 +49,37 @@
 			      extras:{}//额外扩展参数
 			    }]
 		  	});
+		  	//页面的跳转
+		  	$('.sousu').click(function(){
+				mui.openWindow({ 
+					url:'page/person.html', //需要打开页面的url地址 
+					id:'person',  //需要打开页面的url页面id
+					styles:{ 
+						top:'0px',//新页面顶部位置 
+						bottom:'0px',//新页面底部位置 
+	//					width:newpage-width,//新页面宽度，默认为100% 
+	//					height:newpage-height,//新页面高度，默认为100% ...... 
+					}, 
+					extras:{ 
+						name:'aries',
+						age:'18',
+	//					.....//自定义扩展参数，可以用来处理页面间传值 
+					},show:{ //控制打开页面的类型
+						autoShow:true,
+	//					//页面loaded事件发生后自动显示，默认为true 
+						aniShow:'slide-in-right',//页面显示动画，默认为”slide-in-right“；  页面出现的方式 左右上下
+						duration:'300'//页面动画持续时间，Android平台默认100毫秒，iOS平台默认200毫秒； 
+					}, waiting:{ // 控制 弹出转圈框的信息
+						autoShow:true,//自动显示等待框，默认为true 
+						title:'加载中...',//等待对话框上显示的提示内容 
+						options:{ 
+							width:'100px',//等待框背景区域宽度，默认根据内容自动计算合适宽度 
+							height:'100px',//等待框背景区域高度，默认根据内容自动计算合适高度 ...... 
+						} 
+					}
+				});
+			});
+		  	
 		</script>
 	</body>
 
