--- a/jxfyList.html
+++ b/jxfyList.html
@@ -31,9 +31,12 @@
 						 		<div class="fy_xx">
 						 			<p class="lp">建外SOHO</p>
 						 			<p class="mjwz">朝阳区-国贸 101.5m2</p>
-						 			<p class="jzjf">精装交付</p>
+						 			<p class="jfList">
+						 				<span class="jzjf">精装交付</span>
+						 				<span class="jzdj">定金</span>
+						 			</p>
 						 			<p class="dj">
-						 				<s>7.5<i>元/m2/天</i></s>
+						 				<!--<s>7.5<i>元/m2/天</i></s>-->
 						 				<span>6.5<i>元/m2/天</i></span>
 						 			</p>
 						 		</div>
@@ -46,9 +49,11 @@
 						 		<div class="fy_xx">
 						 			<p class="lp">建外SOHO</p>
 						 			<p class="mjwz">朝阳区-国贸 101.5m2</p>
-						 			<p class="jzjf">精装交付</p>
+						 			<p class="jfList">
+						 				<span class="jzjf">精装交付</span>
+						 				<span class="jzdj">定金</span>
+						 			</p>
 						 			<p class="dj">
-						 				<s>7.5<i>元/m2/天</i></s>
 						 				<span>6.5<i>元/m2/天</i></span>
 						 			</p>
 						 		</div>
@@ -61,9 +66,11 @@
 						 		<div class="fy_xx">
 						 			<p class="lp">建外SOHO</p>
 						 			<p class="mjwz">朝阳区-国贸 101.5m2</p>
-						 			<p class="jzjf">精装交付</p>
+						 			<p class="jfList">
+						 				<span class="jzjf">精装交付</span>
+						 				<span class="jzdj">定金</span>
+						 			</p>
 						 			<p class="dj">
-						 				<s>7.5<i>元/m2/天</i></s>
 						 				<span>6.5<i>元/m2/天</i></span>
 						 			</p>
 						 		</div>
@@ -76,9 +83,11 @@
 						 		<div class="fy_xx">
 						 			<p class="lp">建外SOHO</p>
 						 			<p class="mjwz">朝阳区-国贸 101.5m2</p>
-						 			<p class="jzjf">精装交付</p>
+						 			<p class="jfList">
+						 				<span class="jzjf">精装交付</span>
+						 				<span class="jzdj">定金</span>
+						 			</p>
 						 			<p class="dj">
-						 				<s>7.5<i>元/m2/天</i></s>
 						 				<span>6.5<i>元/m2/天</i></span>
 						 			</p>
 						 		</div>
@@ -91,9 +100,11 @@
 						 		<div class="fy_xx">
 						 			<p class="lp">建外SOHO</p>
 						 			<p class="mjwz">朝阳区-国贸 101.5m2</p>
-						 			<p class="jzjf">精装交付</p>
+						 			<p class="jfList">
+						 				<span class="jzjf">精装交付</span>
+						 				<span class="jzdj">定金</span>
+						 			</p>
 						 			<p class="dj">
-						 				<s>7.5<i>元/m2/天</i></s>
 						 				<span>6.5<i>元/m2/天</i></span>
 						 			</p>
 						 		</div>
@@ -106,9 +117,11 @@
 						 		<div class="fy_xx">
 						 			<p class="lp">建外SOHO</p>
 						 			<p class="mjwz">朝阳区-国贸 101.5m2</p>
-						 			<p class="jzjf">精装交付</p>
+						 			<p class="jfList">
+						 				<span class="jzjf">精装交付</span>
+						 				<span class="jzdj">定金</span>
+						 			</p>
 						 			<p class="dj">
-						 				<s>7.5<i>元/m2/天</i></s>
 						 				<span>6.5<i>元/m2/天</i></span>
 						 			</p>
 						 		</div>
