--- a/sy.html
+++ b/sy.html
@@ -324,7 +324,7 @@
 			  //打开关于页面
 			  mui.openWindow({
 			    url: './jxfy.html', 
-			    id:'info'
+			    id:'jxfy'
 			  });
 			});
 		</script>
