--- a/jxfyList.html
+++ b/jxfyList.html
@@ -13,6 +13,7 @@
 		<link rel="stylesheet" type="text/css" href="css/sy.css"/>
 		<script type="text/javascript" src="js/lib/flexible.js"></script>
 		<script type="text/javascript" src="js/lib/flexible_css.js"></script>
+		<script type="text/javascript" src="js/lib/jquery-1.10.2.min.js"></script>
 	</head>
 
 	<body>
@@ -24,7 +25,7 @@
 					<!--特价房源-->
 					<div class="mui-table-view mui-table-view-chevron">
 						 <ul class="fy_list listUl">
-						 	<li>
+						 	<li class="listtail">
 						 		<div class="fy_pic">
 						 			<img src="img/fypic.png" alt="" />
 						 		</div>
@@ -42,7 +43,7 @@
 						 		</div>
 						 	</li>
 						 	<li class="zx"></li>
-						 	<li>
+						 	<li class="listtail">
 						 		<div class="fy_pic">
 						 			<img src="img/fypic.png" alt="" />
 						 		</div>
@@ -59,7 +60,7 @@
 						 		</div>
 						 	</li>
 						 	<li class="zx"></li>
-						 	<li>
+						 	<li class="listtail">
 						 		<div class="fy_pic">
 						 			<img src="img/fypic.png" alt="" />
 						 		</div>
@@ -76,7 +77,7 @@
 						 		</div>
 						 	</li>
 						 	<li class="zx"></li>
-						 	<li>
+						 	<li class="listtail">
 						 		<div class="fy_pic">
 						 			<img src="img/fypic.png" alt="" />
 						 		</div>
@@ -93,7 +94,7 @@
 						 		</div>
 						 	</li>
 						 	<li class="zx"></li>
-						 	<li>
+						 	<li class="listtail">
 						 		<div class="fy_pic">
 						 			<img src="img/fypic.png" alt="" />
 						 		</div>
@@ -110,7 +111,7 @@
 						 		</div>
 						 	</li>
 						 	<li class="zx"></li>
-						 	<li>
+						 	<li class="listtail">
 						 		<div class="fy_pic">
 						 			<img src="img/fypic.png" alt="" />
 						 		</div>
@@ -195,6 +196,34 @@
 					mui('#pullrefresh').pullRefresh().pullupLoading();
 				});
 			}
+			$('.listtail').click(function(){
+				mui.openWindow({ 
+					url:'page/fyTail.html', //需要打开页面的url地址 
+					id:'person',  //需要打开页面的url页面id
+					styles:{ 
+						top:'0px',//新页面顶部位置 
+						bottom:'0px',//新页面底部位置 
+	//					width:newpage-width,//新页面宽度，默认为100% 
+	//					height:newpage-height,//新页面高度，默认为100% ...... 
+					}, 
+					extras:{ 
+
+	//					.....//自定义扩展参数，可以用来处理页面间传值 
+					},show:{ //控制打开页面的类型
+						autoShow:true,
+	//					//页面loaded事件发生后自动显示，默认为true 
+						aniShow:'slide-in-right',//页面显示动画，默认为”slide-in-right“；  页面出现的方式 左右上下
+						duration:''//页面动画持续时间，Android平台默认100毫秒，iOS平台默认200毫秒； 
+					}, waiting:{ // 控制 弹出转圈框的信息
+						autoShow:true,//自动显示等待框，默认为true 
+						title:'加载中...',//等待对话框上显示的提示内容 
+						options:{ 
+							width:'100px',//等待框背景区域宽度，默认根据内容自动计算合适宽度 
+							height:'100px',//等待框背景区域高度，默认根据内容自动计算合适高度 ...... 
+						} 
+					}
+				});
+			});
 		</script>
 	</body>
 
