--- a/sy.html
+++ b/sy.html
@@ -136,7 +136,7 @@
 				<div class="box_q rmfy_box" style="display: block;">
 					<!--热门房源-->
 					<div class="tit">热门楼盘</div>
-					<ul class="fypic">
+					<ul class="fypics">
 						<li>
 							<img src="http://47.92.145.21:81/upload/2017-08-27/1aa56c6ff7a0f6d29ab34dd2ed5f6e39.png" alt="" />
 							<p class="fy_title">三里屯</p>
