--- a/jxfy.html
+++ b/jxfy.html
@@ -35,7 +35,6 @@
 		
 		
 		<script type="text/javascript">
-			var id = 100;
 			mui.init({
 			    subpages:[{
 			      url:'jxfyList.html',//子页面HTML地址，支持本地地址和网络地址
@@ -47,7 +46,7 @@
 			        height:subpage-height,//子页面高度，默认为100%
 			        ......*/
 			      },
-			      extras:{id:'100'}//额外扩展参数
+			      extras:{}//额外扩展参数
 			    }]
 		  	});
 		  	//页面的跳转
