--- a/fwsc.html
+++ b/fwsc.html
@@ -11,7 +11,7 @@
 		<script type="text/javascript" src="js/lib/flexible_css.js"></script>
 		<script src="js/lib/jquery-1.10.2.min.js" type="text/javascript" charset="utf-8"></script>
 		<link rel="stylesheet" type="text/css" href="css/style.css"/>
-		<link rel="stylesheet" type="text/css" href="page/fwsc.css"/>
+		<link rel="stylesheet" type="text/css" href="css/fwsc.css"/>
 	</head>
 	<body>
 		<div class="mui-content fw_main">
@@ -34,7 +34,7 @@
 					</li>
 					<li>
 						<p class="fw_ion">
-							<img src="http://116.62.68.26/yskjapp\servicemalll\fourservices\mall_finance.png" alt="" />
+							<img src="http://116.62.68.26/yskjapp\servicemall\fourservices\mall_finance.png" alt="" />
 						</p>
 						<p class="fw_name">金融服务</p>
 					</li>
@@ -46,6 +46,42 @@
 					</li>
 				</ul>
 			</div>
+			<div class="zxsj_box" style="padding-bottom: 0.533333rem;">
+				<div class="tit">热门推荐</div>
+				<div class="rmtj_pic yiny">
+					<img src="http://116.62.68.26/yskjapp\servicemall\recommend\hotservice1.png"/>
+				</div>
+				<div class="rmtj_pic yiny">
+					<img src="http://116.62.68.26/yskjapp\servicemall\recommend\hotservice2.png"/>
+				</div>
+				<div class="rmtj_pic yiny" style="margin-top: 0.533333rem;">
+					<img src="http://116.62.68.26/yskjapp\servicemall\recommend\hotservice3.png"/>
+				</div>
+			</div>
+			<div class="zxsj_box" style="padding-bottom: 1rem;">
+				<div class="tit">为什么选择我们</div>
+				<ul class="whysel">
+					<li>
+						<p class="sel_ion">
+							<img src="http://116.62.68.26/yskjapp\servicemall\advantage\service.png" alt="" />
+						</p>
+						<p class="sel_name">1+N专属服务</p>
+					</li>
+					<li>
+						<p class="sel_ion">
+							<img src="http://116.62.68.26/yskjapp\servicemall\advantage\information.png" alt="" />
+						</p>
+						<p class="sel_name">信息安全</p>
+					</li>
+					<li>
+						<p class="sel_ion">
+							<img src="http://116.62.68.26/yskjapp\servicemall\advantage\convenient.png" alt="" />
+						</p>
+						<p class="sel_name">高效便捷</p>
+					</li>
+				</ul>
+			</div>
+			
 		</div>
 		<script type="text/javascript">
 			mui.init()
