--- a/jxfy.html
+++ b/jxfy.html
@@ -67,7 +67,7 @@
 					},show:{ //控制打开页面的类型
 						autoShow:true,
 	//					//页面loaded事件发生后自动显示，默认为true 
-						aniShow:'slide-in-right',//页面显示动画，默认为”slide-in-right“；  页面出现的方式 左右上下
+						aniShow:'slide-in-up',//页面显示动画，默认为”slide-in-right“；  页面出现的方式 左右上下
 						duration:'300'//页面动画持续时间，Android平台默认100毫秒，iOS平台默认200毫秒； 
 					}, waiting:{ // 控制 弹出转圈框的信息
 						autoShow:true,//自动显示等待框，默认为true 
