--- a/jxfyList.html
+++ b/jxfyList.html
@@ -24,7 +24,7 @@
 				<!--<ul class="mui-table-view mui-table-view-chevron">-->
 					<!--特价房源-->
 					<div class="mui-table-view mui-table-view-chevron">
-						 <ul class="fy_list listUl">
+						 <ul class="fy_list listUl" id="ulId">
 						 	<li class="listtail">
 						 		<div class="fy_pic">
 						 			<img src="img/fypic.png" alt="" />
@@ -196,8 +196,13 @@
 					mui('#pullrefresh').pullRefresh().pullupLoading();
 				});
 			}
-			$('.listtail').click(function(){
-				mui.openWindow({ 
+			window.addEventListener("shijian", function (e) {
+			    //获得事件参数
+			    
+			});
+			mui("#ulId").on("tap","li",function(){
+			    // 逻辑代码，例如跳转详情页、ajax
+			 	mui.openWindow({ 
 					url:'page/fyTail.html', //需要打开页面的url地址 
 					id:'fyTail',  //需要打开页面的url页面id
 					styles:{ 
@@ -224,6 +229,35 @@
 					}
 				});
 			});
+			/*$('.listtail').click(function(){
+				mui.openWindow({ 
+					url:'page/fyTail.html', //需要打开页面的url地址 
+					id:'fyTail',  //需要打开页面的url页面id
+					styles:{ 
+						top:'0px',//新页面顶部位置 
+						bottom:'0px',//新页面底部位置 
+	//					width:newpage-width,//新页面宽度，默认为100% 
+	//					height:newpage-height,//新页面高度，默认为100% ...... 
+					}, 
+					extras:{ 
+
+	//					.....//自定义扩展参数，可以用来处理页面间传值 
+					},show:{ //控制打开页面的类型
+						autoShow:true,
+	//					//页面loaded事件发生后自动显示，默认为true 
+						aniShow:'slide-in-right',//页面显示动画，默认为”slide-in-right“；  页面出现的方式 左右上下
+						duration:''//页面动画持续时间，Android平台默认100毫秒，iOS平台默认200毫秒； 
+					}, waiting:{ // 控制 弹出转圈框的信息
+						autoShow:true,//自动显示等待框，默认为true 
+						title:'加载中...',//等待对话框上显示的提示内容 
+						options:{ 
+							width:'100px',//等待框背景区域宽度，默认根据内容自动计算合适宽度 
+							height:'100px',//等待框背景区域高度，默认根据内容自动计算合适高度 ...... 
+						} 
+					}
+				});
+			});*/
+			
 		</script>
 	</body>
 
