--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 	        <span class="mui-tab-label">我的</span>
 	    </a>
 	</nav>
+	<div class="mui-content">
+	    <div class="indexss idnexdisplay"></div>
+	</div>
 	<script type="text/javascript" charset="utf-8">
       	mui.init();
       	var subpages = ['sy.html', 'jxfy.html', 'fwsc.html', 'qyhl.html', 'wd.html'];
