--- a/jxfyList.html
+++ b/jxfyList.html
@@ -18,7 +18,7 @@
 
 	<body>
 		<!--下拉刷新容器-->
-		<div id="pullrefresh" class="mui-content mui-scroll-wrapper">
+		<div id="pullrefresh" class="mui-content mui-scroll-wrapper" style="border: 1px solid red;position: relative;z-index: 12;">
 			<div class="mui-scroll">
 				<!--数据列表-->
 				<!--<ul class="mui-table-view mui-table-view-chevron">-->
@@ -135,6 +135,7 @@
 
 		<script src="js/mui.min.js"></script>
 		<script>
+			
 			mui.init({
 				pullRefresh: {
 					container: '#pullrefresh',
@@ -196,9 +197,12 @@
 					mui('#pullrefresh').pullRefresh().pullupLoading();
 				});
 			}
-			window.addEventListener("shijian", function (e) {
+			window.addEventListener("weizhi", function (e) {
 			    //获得事件参数
-			    
+			    var idx = e.detail.idx;
+				alert(idx);
+				var mask = mui.createMask();//callback为用户点击蒙版时自动执行的回调；
+				mask.show();//显示遮罩
 			});
 			mui("#ulId").on("tap","li",function(){
 			    // 逻辑代码，例如跳转详情页、ajax
