--- a/wd.html
+++ b/wd.html
@@ -23,6 +23,8 @@
 		    	<p class="user_news" id="login">
 					<span class="ljdl">立即登陆</span>
 					<span class="dlcz">登陆后可进行更多操作</span>
+					<span class="wrz" style="display: none;">未认证</span>
+					<span class="yrz" style="display: none;">已认证</span>
 		    	</p>
 		    </h1>
 		</header>
@@ -53,6 +55,7 @@
 		    <p class="wd_tip">如有任何疑问请拨打咨询电话</p>
 		    <p class="wd_tel"><a href="tel:400-078-8800">400-078-8800</a></p>
 		</div>
+		<script type="text/javascript" src="js/lib/app_config.js" ></script>
 		<script type="text/javascript">
 			mui.init()
 			//跳转页面地址
@@ -97,6 +100,52 @@
 			    id:'login'
 			  });
 			});
+			//登陆成功后获取用户信息
+			function gainUser(){
+				mui.ajax(url + '/yskjApp/appYskj/V1/getCookieInfo.do',{
+					data:{
+						"cookie":JSON.parse(localStorage.getItem('cookxs'))
+					},
+					dataType:'json',
+					type:'post',
+					timeout:10000,
+					headers:{'Content-Type':'application/json'},	              
+					success:function(data){
+						if(data.success){
+							var userData = data.data;
+							$('.ljdl').html(userData.name);
+							if(userData.status2 == 0){
+								$('.dlcz').css('display','none');
+								$('.yrz').css('display','none');
+								$('.wrz').css('display','block');
+							}
+							if(userData.status2 == 1){
+								$('.dlcz').css('display','none');
+								$('.wrz').css('display','none');
+								$('.yrz').css('display','block');
+							}
+						}else{
+//							mui.toast(data.message,{ duration:'2000', type:'div' }) 
+							return;
+						}
+					},
+					error:function(xhr,type,errorThrown){
+						console.log(type);
+					}
+				});
+			}
+			//获取信息方法
+			function takeuser(){
+				if(JSON.parse(localStorage.getItem('cookxs'))){
+					gainUser();
+					console.log(JSON.parse(localStorage.getItem('cookxs')))
+				}else{
+					$('.dlcz').css('display','block');
+					$('.wrz').css('display','none');
+					$('.yrz').css('display','none');
+				}				
+			}
+			takeuser();
 		</script>
 	</body>
 
