--- a/wd.html
+++ b/wd.html
@@ -117,7 +117,11 @@
 							var phone = userData.phone;
 							var reg = /^(\d{3})\d{4}(\d{4})$/;
 							phone = phone.replace(reg, "$1****$2");
-							$('.ljdl').html(phone);
+							if(userData.name != ''){
+								$('.ljdl').html(userData.name);
+							}else{
+								$('.ljdl').html(phone);			
+							}
 							if(userData.status2 == 0){
 								$('.dlcz').css('display','none');
 								$('.yrz').css('display','none');
@@ -144,6 +148,7 @@
 					gainUser();
 					console.log(JSON.parse(localStorage.getItem('cookxs')))
 				}else{
+					$('.ljdl').html('立即登陆');
 					$('.dlcz').css('display','block');
 					$('.wrz').css('display','none');
 					$('.yrz').css('display','none');
