--- a/wd.html
+++ b/wd.html
@@ -57,37 +57,38 @@
 		<script type="text/javascript" src="js/lib/app_config.js" ></script>
 		<script type="text/javascript">
 			mui.init()
+			alert('我的页面323232');
 			//跳转页面地址
 			var toUrl = ['page/person.html','page/mycollection.html','page/myset.html'];
 			for(var i=0; i<$('.tolink').length; i++){
 				(function(index){
 					$('.tolink').eq(index).click(function(){
 						mui.openWindow({ 
-						url:toUrl[index], //需要打开页面的url地址 
-						id:'person'+index,  //需要打开页面的url页面id
-						styles:{ 
-							top:'0px',//新页面顶部位置 
-							bottom:'0px',//新页面底部位置 
-		//					width:newpage-width,//新页面宽度，默认为100% 
-		//					height:newpage-height,//新页面高度，默认为100% ...... 
-						}, 
-						extras:{ 
-	
-		//					.....//自定义扩展参数，可以用来处理页面间传值 
-						},show:{ //控制打开页面的类型
-							autoShow:true,
-		//					//页面loaded事件发生后自动显示，默认为true 
-							aniShow:'slide-in-right',//页面显示动画，默认为”slide-in-right“；  页面出现的方式 左右上下
-							duration:''//页面动画持续时间，Android平台默认100毫秒，iOS平台默认200毫秒； 
-						}, waiting:{ // 控制 弹出转圈框的信息
-							autoShow:true,//自动显示等待框，默认为true 
-							title:'加载中...',//等待对话框上显示的提示内容 
-							options:{ 
-								width:'100px',//等待框背景区域宽度，默认根据内容自动计算合适宽度 
-								height:'100px',//等待框背景区域高度，默认根据内容自动计算合适高度 ...... 
-							} 
-						}
-					});
+							url:toUrl[index], //需要打开页面的url地址 
+							id:'person'+index,  //需要打开页面的url页面id
+							styles:{ 
+								top:'0px',//新页面顶部位置 
+								bottom:'0px',//新页面底部位置 
+			//					width:newpage-width,//新页面宽度，默认为100% 
+			//					height:newpage-height,//新页面高度，默认为100% ...... 
+							}, 
+							extras:{ 
+		
+			//					.....//自定义扩展参数，可以用来处理页面间传值 
+							},show:{ //控制打开页面的类型
+								autoShow:true,
+			//					//页面loaded事件发生后自动显示，默认为true 
+								aniShow:'slide-in-right',//页面显示动画，默认为”slide-in-right“；  页面出现的方式 左右上下
+								duration:''//页面动画持续时间，Android平台默认100毫秒，iOS平台默认200毫秒； 
+							}, waiting:{ // 控制 弹出转圈框的信息
+								autoShow:true,//自动显示等待框，默认为true 
+								title:'加载中...',//等待对话框上显示的提示内容 
+								options:{ 
+									width:'100px',//等待框背景区域宽度，默认根据内容自动计算合适宽度 
+									height:'100px',//等待框背景区域高度，默认根据内容自动计算合适高度 ...... 
+								} 
+							}
+						});
 					})
 				})(i)		
 			}
@@ -144,9 +145,10 @@
 			//获取信息方法
 			function takeuser(){
 				if(JSON.parse(localStorage.getItem('cookxs'))){
+					alert(123)
 					gainUser();
-					console.log(JSON.parse(localStorage.getItem('cookxs')))
 				}else{
+					alert(456)
 					$('.ljdl').html('立即登陆');
 					$('.dlcz').css('display','block');
 					$('.wrz').css('display','none');
