--- a/jxfy.html
+++ b/jxfy.html
@@ -27,7 +27,7 @@
 					<li class="shuixuanweizhi" onclick="weizjihanshu()">位置<span class="mui-icon mui-icon-arrowdown jxfyzxtubiao"></span></li>
 					<li class="shaxuandejiage">价格<span class="mui-icon mui-icon-arrowdown jxfyzxtubiao"></span></li>
 					<li class="shiaxuanarea">面积<span class="mui-icon mui-icon-arrowdown jxfyzxtubiao"></span></li>
-					<li class="shuxinshux">筛选<span class="mui-icon mui-icon-arrowdown jxfyzxtubiao"></span></li>
+					<li class="shuxinshux" onclick="siaxuansy()">筛选<span class="mui-icon mui-icon-arrowdown jxfyzxtubiao"></span></li>
 				</ul>
 			</div>
 			
@@ -84,6 +84,19 @@
 					}
 				});
 			});
+			
+			/*筛选点击事件*/
+			function siaxuansy(){
+				alert('筛选');
+				var main = plus.webview.getWebviewById('jxfyList');
+				mui.fire(main, "weizhi",{
+				    idx:1//1位置
+				})
+				var index = plus.webview.getLaunchWebview();
+				mui.fire(index, "weizhi1",{
+				    idxid:1//1位置
+				})
+			}
 			var jiage = 1;
 			var area = 1;
 /*			位置的点击出现遮罩层*/
