--- a/jxfyList.html
+++ b/jxfyList.html
@@ -35,6 +35,30 @@
 						</ul>
 					</div>
 				</div>
+				<div class="zhezhaoceshx zhezhaocdisplayshx">
+					<div class="zzcnershx">
+						<div class="mjqyfm">
+							面积区域（㎡）
+						</div>
+						<div class="xuanxing">
+							<div class="xuanxingshuzi">
+								<div class="xiaokuai">0-99</div>
+								<div class="xiaokuai">100-299</div>
+								<div class="xiaokuai">399-499</div>
+								<div class="xiaokuai">500-999</div>
+							</div>
+							<div class="xuanxingshuzi">
+								<div class="xiaokuai">1000-1499</div>
+								<div class="xiaokuai">1500以上</div>
+							</div>
+							<div class="xuanxingshuzi">
+								<div class="xiaokuai pingangm">㎡</div>
+								<div class="xiaokuai pingangm">㎡</div>
+							</div>
+							
+						</div>
+					</div>
+				</div>
 				<!--数据列表-->
 				<!--<ul class="mui-table-view mui-table-view-chevron">-->
 					<!--特价房源-->
@@ -224,6 +248,18 @@
 					return false;
                 })
 			});
+			
+			/*出现筛选遮罩层*/
+			$('.zhezhaoce').click(function(){
+				$(".zhezhaoce").addClass("zhezhaocdisplay");
+				$(".zhezhaoce").removeClass("zhezhaocdisbalo");
+				mui('#pullrefresh').pullRefresh().setStopped(false);
+				var index = plus.webview.getLaunchWebview();
+				mui.fire(index, "weizhi1",{
+				    idxid:3//1位置
+				})
+			});
+			
 /*			点击遮罩层取消遮罩层*/
 			$('.zhezhaoce').click(function(){
 				$(".zhezhaoce").addClass("zhezhaocdisplay");
