--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
 		window.addEventListener("weizhi1", function (e) {
 		    //获得事件参数
 		    var idxid = e.detail.idxid;
-			if(idxid == 1){
+			if(idxid == 1 || idxid == 3){
 				mask.show();//显示遮罩
 			}
-			if(idxid == 2){
+			if(idxid == 2 || idxid == 4){
 				mask.close();//关闭遮罩
 			}
 		});
