--- a/wd.html
+++ b/wd.html
@@ -99,7 +99,7 @@
 					  url: './page/person.html', 
 					  id:'person1'
 					});		
-					alert('一登录')
+					alert('已登录')
 					return
 				}else{
 					//跳转登陆页面
@@ -162,6 +162,7 @@
 					$('.yrz').css('display','none');
 				}				
 			}
+			
 			takeuser();
 		</script>
 	</body>
