--- a/sy.html
+++ b/sy.html
@@ -21,7 +21,7 @@
 		    <!--轮播-->
 			<div id="slider" class="mui-slider" >
 			  <div class="mui-slider-group mui-slider-loop">
-			    <!-- 额外增加的一个节点(循环轮播：第一个节点是最后一张轮播) -->
+			    <!-- 额外增加的一个节点(循环轮播：第一个节点是最后一张轮播)11 -->
 			    <div class="mui-slider-item mui-slider-item-duplicate">
 			      <a href="#">
 			        <img src="img/2.png">
