--- a/wd.html
+++ b/wd.html
@@ -61,7 +61,7 @@
 			    // mui.fire()传过来的额外的参数，在event.detail中；
 			    var detail = event.detail;
 			    var param = detail.ttt;
-			    alert(param);
+//			    alert(param);
 			    takeuser();
 			    // 执行相应的ajax或者操作DOM等操作
 			});
@@ -161,7 +161,7 @@
 			}
 			//获取信息方法
 			function takeuser(){
-				alert('信息获取')
+//				alert('信息获取')
 				if(JSON.parse(localStorage.getItem('cookxs_yh'))){
 					gainUser();
 				}else{
