--- a/sy.html
+++ b/sy.html
@@ -601,7 +601,7 @@
 				},'json'
 			);*/
 			var toLink = ['page/broker.html','page/broker.html','page/broker.html','page/steward.html'];
-			//最新数据
+			//最新数据213
 			for (var b=0; b<$('.nav_list li').length; b++) {
 				(function(ix){
 					$('.nav_list li').eq(b).click(function(){
