--- a/sy.html
+++ b/sy.html
@@ -600,7 +600,7 @@
 					console.info(123465);
 				},'json'
 			);*/
-			var toLink = ['page/broker.html','page/broker.html','page/broker.html','page/steward.html'];
+			var toLink = ['page/broker.html','page/enterprise.html','page/broker.html','page/steward.html'];
 			//最新数据213
 			for (var b=0; b<$('.nav_list li').length; b++) {
 				(function(ix){
