--- a/fwsc.html
+++ b/fwsc.html
@@ -62,22 +62,22 @@
 				<div class="tit">为什么选择我们</div>
 				<ul class="whysel">
 					<li>
-						<p class="sel_ion">
+						<!--<p class="sel_ion">-->
 							<img src="http://116.62.68.26/yskjapp\servicemall\advantage\service.png" alt="" />
-						</p>
-						<p class="sel_name">1+N专属服务</p>
+						<!--</p>-->
+						<!--<p class="sel_name">1+N专属服务</p>-->
 					</li>
 					<li>
-						<p class="sel_ion">
+						<!--<p class="sel_ion">-->
 							<img src="http://116.62.68.26/yskjapp\servicemall\advantage\information.png" alt="" />
-						</p>
-						<p class="sel_name">信息安全</p>
+						<!--</p>-->
+						<!--<p class="sel_name">信息安全</p>-->
 					</li>
 					<li>
-						<p class="sel_ion">
+						<!--<p class="sel_ion">-->
 							<img src="http://116.62.68.26/yskjapp\servicemall\advantage\convenient.png" alt="" />
-						</p>
-						<p class="sel_name">高效便捷</p>
+						<!--</p>-->
+						<!--<p class="sel_name">高效便捷</p>-->
 					</li>
 				</ul>
 			</div>
