--- a/sy.html
+++ b/sy.html
@@ -121,8 +121,8 @@
 			<div class="tab_main">
 				<!--切换选项-->
 				<p class="tab_nav">
-					<span class="sp_ac" style="float: left;">我要找房</span>
-					<span style="float: right;width: 7.2rem;text-align: inherit;text-indent: 0.666666rem;">业主委托</span>
+					<span  class="sp_ac"   style="float: left;">我要找房</span>
+					<span    style="float: right;width: 7.2rem;text-align: inherit;text-indent: 0.666666rem;">业主委托</span>
 				</p>
 			</div>
 			<!--切换选项-->
@@ -142,14 +142,14 @@
 					<p class="yzwt_tip">请留下您的联系方式，我们会及时与您联系，为您提供专属服务</p>
 					<form class="mui-input-group">
 					    <div class="mui-input-row">
-					        <input type="text" class="mui-input-clear yzwtPhone" placeholder="请输入手机号">
+					        <input type="text" class="mui-input-clear yzwtPhone" placeholder="请输入手机号" onchange="checknull()">
 					    </div>
 					    <div class="mui-input-row">
-					        <input type="text" class="mui-input-clear yazmcode" placeholder="请输入验证码">
+					        <input type="text" class="mui-input-clear yazmcode" placeholder="请输入验证码" onchange="checknull()">
 					    </div>
 					    <div class="btn_box">
 					    	<div class="hqyzm" onclick="huoqvyanzm()">获取验证码</div>
-						    <button type="button" onclick="tijiao()" class="mui-btn mui-btn-primary mui-btn-outlined btn">提交</button>
+						    <button type="button" onclick="tijiao()" class="mui-btn mui-btn-primary mui-btn-outlined btn"disabled="disabled" id="tijiao">立即委托</button>
 					    </div>
 					</form>
 					
@@ -157,7 +157,7 @@
 			</div>
 			<!--特价房源-->
 			<div class="tjfy">
-				<div class="tit">特价房源</div>
+				<div class="tit">幼狮推荐</div>
 				 <ul class="fy_list">
 				 	<!--<li>
 				 		<div class="fy_pic">
@@ -232,11 +232,11 @@
 							boxq[j].style.display = 'none';
 						}
 						if(index == 0){
-							tabSp[index].className = 'sp_ac';							
+							 tabSp[index].className = 'sp_ac';						
 						}else{
-							tabSp[index].className = 'sp_ac1';
+							 tabSp[index].className = 'sp_ac1';	
 						}
-						boxq[index].style.display = 'block';
+						  boxq[index].style.display = 'block';
 					}
 				})(i)
 			}
@@ -363,7 +363,7 @@
 						console.log(data)
 						var string = '';
 						for(var i=0;i<data.length;i++){
-							string = '<li><div class="fy_pic"><img src="http://47.92.145.21:81/'+data[i].pic+'" alt="" /></div><div class="fy_xx"><p class="lp">'+data[i].topic+'&nbsp;&nbsp;'+data[i].zdh+'-'+data[i].fybh+'</p><p class="mjwz">'+data[i].ywqy+'&nbsp;&nbsp;'+data[i].fjmj+'㎡'+'</p><p class="jzjf">'+data[i].fjztate+'</p><p class="dj"><s>'+data[i].oldPrice+'<i>元/m2/天</i></s><span>'+data[i].newPrice+'<i>元/m2/天</i></span></p></div></li><li class="zx"></li>';
+							string = '<li><div class="fy_pic"><img src="http://47.92.145.21:81/'+data[i].pic+'" alt="" /></div><div class="fy_xx"><p class="lp">'+data[i].topic+'&nbsp;&nbsp;'+data[i].zdh+'-'+data[i].fybh+'</p><p class="mjwz">'+data[i].ywqy+'&nbsp;&nbsp;'+data[i].fjmj+'㎡'+'</p><p class="jzjf">'+data[i].fjztate+'</p><p class="dj"><span>'+data[i].newPrice+'<i>元/㎡/天</i></span></p></div></li><li class="zx"></li>';
 							/*document.querySelector('.fypics').innerHTML=string;*/
 							$('.fy_list').append(string);
 						}
@@ -432,13 +432,30 @@
 				localStorage.setItem('cookyezhi', JSON.stringify(cookyezhi));
 				return cookyezhi;
 			}
+			//验证手机号验证码是否为空
+			function checknull(){
+			    var code = $('.yazmcode').val();
+				var phone = $('.yzwtPhone').val();
+				if(phone!=""&&code!="")
+				{
+					$('#tijiao').attr("disabled",false);  
+				}else{
+					$('#tijiao').attr("disabled",true);  
+				}
+			}
 			
 			var cookyezhi = createcookie();
 			/*业主委托*/
 			function huoqvyanzm(){
 				/*			发送手机验证码*/
+				
 				if(tag){
 					var phone = $('.yzwtPhone').val();
+					if(phone=="" )
+				{
+					mui.alert("手机号为空");
+					return false;
+				}
 					mui.ajax(url+'/yskjApp/appYskj/V1/getServiceCode.do',{
 						data:{
 							'phone':phone,
@@ -471,6 +488,11 @@
 			function tijiao(){
 				var code = $('.yazmcode').val();
 				var phone = $('.yzwtPhone').val();
+				if(phone==""&&code=="")
+				{
+					mui.alert("手机号或验证码为空");
+					return false;
+				}
 				mui.ajax(url+'/yskjApp/appYskj/V1/compServiceCode.do',{
 					data:{
 						'code':code,
@@ -496,7 +518,7 @@
 									if(data.success){
 										$('.yzwtPhone').val('');
 										$('.yazmcode').val('');
-										mui.alert('信息提交成功！');
+										mui.alert('委托成功，我们将会与您联系');
 									}else{
 										mui.alert(data.message);
 									}
