--- a/sy.html
+++ b/sy.html
@@ -118,7 +118,7 @@
 				</ul>
 			</div>
 			<!--Tab切换-->
-			<div class="tab_main">
+			<div class="tab_main" style="border-bottom: 1px solid #fff;">
 				<!--切换选项-->
 				<p class="tab_nav">
 					<span  class="sp_ac"   style="float: left;">我要找房</span>
@@ -130,10 +130,7 @@
 				<div class="box_q rmfy_box" style="display: block;">
 					<!--热门房源-->
 					<div class="tit">热门楼盘</div>
-					<ul class="fypics">
-						
-						
-					</ul>
+					<ul class="fypics"></ul>
 				</div>
 				<div class="box_q">
 					<div class="yzwt_pic">
